fix dark mode flickering

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,11 @@ html {
   scroll-behavior: smooth;
 }
 
+html.dark,
+html.dark body {
+  background-color: #1a202c;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
